# dispacth

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  tests_offline.py
backend/app/: contracts.py  db.py  geo.py  main.py
backend/app/agents/: dispatch_agent.py  order_agent.py  resource_agent.py
frontend/: next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Thread.tsx
minutes/: 1.md
