[project]
name = "dispatch-order-agent"
version = "0.1.0"
description = "Order Agent + Resource Allocation Agent for a freight dispatching system (hackathon)"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.19",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "assistant-stream>=0.0.20",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["httpx>=0.27.0"]
